# sandrokottos

./: .gitignore  1011.txt  CMakeLists.txt  IO.h  Main.cpp  Model.h  OptimizeOrderSize.h  OptimizePickupAndDeliveryDuration.h  SolveCVRPPDTW.h  t.ps1
cmake/: nlohmann_json.cmake
data/questions/: question2-001.json  question2-002.json  question2-003.json  question2-005.json  question2-007.json  question2-008.json  question2-009.json  question2-011.json  question2-014.json  question2-015.json  question2-016.json  question2-017.json  question2-018.json  question2-019.json  question2-020.json  question2-022.json  question2-023.json  question2-024.json  question2-025.json  question2-026.json  question2-028.json  question2-029.json  question2-030.json  question2-032.json  question2-033.json  question2-034.json  question2-036.json  question2-037.json  question2-039.json  question2-042.json  question2-043.json  question2-046.json  question2-047.json  question2-048.json  question2-053.json  question2-054.json  question2-990.json  question2-991.json  question2-992.json  question2-993.json  (+6 more)
extra/: generate_question.py  q2_sample.py
